# Induction_brewery

./: README.md
Panel_esp32/source/Build_Win10_64/induction_heater_v01_10/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old  settings_visualstdcode.txt
Panel_esp32/source/Build_Win10_64/induction_heater_v01_10/main/: CMakeLists.txt  MAX31865.h  audioalarmsensor.c  audiobboilndone.c  audioboilnrun.c  audiodisconnect.c  dac_aud.h  datablock.c  hw_init.c  inductionboard.h  key.c  lcd.c  main_cod.c  menu.h  modbus.c  process_work.c  process_work.h  workspace.code-workspace
Panel_esp32/source/induction_heater_v01_10/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old
SCADA_PRJ_TraceMode/Induction_brewery_tracemode/: inductbrew.prj  inductbrew.~prj
audio/запуск/: 11.c  12.c  14.c  3.c
audio/затираниезавершено/: 4.c
audio/кипячение/: 5.c
audio/кипячениезаверш/: 6.c
audio/кнопка/: 81.c
audio/нагрев/: 1.c
audio/неисправност/: 2.c
audio/термпауз/: 3.c
audio/хмель/: 7.c
power_board/303203101364/curve_adc/: thermistor.xlsx
power_board/303203101364/source/: Inductor_v1.stw  Inductor_v1.wed  TAGS.txt  TAGS_Filelist.txt  adc.c  adc.h  heater_v1.dep  heater_v1.stp  hrdw_init.c  hrdw_init.h  interrupt_vector.c  isr.c  isr.h  main.c  sci.c  sci.h
test77/test77/: Form1.Designer.cs  Program.cs  test77.csproj
test77/test77/Properties/: AssemblyInfo.cs  Settings.Designer.cs
testPowerBoard_pc232/: test77.sln
testPowerBoard_pc232/test77/: Form1.cs
testPowerBoard_pc232/test77/Properties/: Resources.Designer.cs
(+85 files in other folders)
