idf_component_register(SRCS "main_cod.c"
"wifi.c"
"process_work.c"
"modbus.c"
"menu.c"
"MAX31865.c"
"lcd.c"
"key.c"
"inductionboard.c"
"hw_init.c"
"datablock.c"
"dac_aud.c"
"CRCTable.c"
"audiotermopause.c"
"audiomeshrun.c"
"audiomeshdone.c"
"audioloadsystem.c"
"audiokeypress.c"
"audiohopsadd.c"
"audiodisconnect.c"
"audioconnect.c"
"audioboilnrun.c"
"audiobboilndone.c"
"audioalarmsensor.c"
                    INCLUDE_DIRS "")